<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        android:icon="@drawable/icon_setting"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_Directory"
        android:orderInCategory="100"
        android:title="@string/select_Directory"
        android:icon="@drawable/icon_folder"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_Delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/icon_delete"
        app:showAsAction="always" />

<!--    <item-->
<!--        android:id="@+id/action_MarkUpMulti"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/apply_Mark"-->
<!--        android:icon="@drawable/icon_multi_check"-->
<!--        app:showAsAction="always" />-->

</menu>
