<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/colorText"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/text_color"
        android:layout_margin="4dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/colorOutline"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/colorOutline"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/outline_color"
        android:layout_margin="4dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/colorText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/colorPlate"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/color_plate"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintTop_toBottomOf="@id/colorOutline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/colorRange"
        />

    <ImageView
        android:id="@+id/colorRange"
        android:layout_width="40dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/color_range"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toBottomOf="@id/colorOutline"
        app:layout_constraintLeft_toRightOf="@id/colorPlate"
        app:layout_constraintRight_toRightOf="parent"
        />

    <SeekBar
        android:id="@+id/barAlpha"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="48dp"
        android:max="255"
        android:min="0"
        app:layout_constraintTop_toBottomOf="@id/colorRange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/colorCurr"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="3"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/color_range"
        android:background="@drawable/border_color"
        app:layout_constraintTop_toBottomOf="@id/barAlpha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/colorArrow"
        />

    <TextView
        android:id="@+id/colorArrow"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="2"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/arrow_text"
        android:layout_margin="4dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/barAlpha"
        app:layout_constraintLeft_toRightOf="@id/colorCurr"
        app:layout_constraintRight_toLeftOf="@id/colorWork"
        />

    <ImageView
        android:id="@+id/colorWork"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="3"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_color"
        android:contentDescription="@string/color_range"
        app:layout_constraintTop_toBottomOf="@id/barAlpha"
        app:layout_constraintLeft_toRightOf="@id/colorArrow"
        app:layout_constraintRight_toLeftOf="@id/colorHex"
        />

    <EditText
        android:id="@+id/colorHex"
        android:autofillHints="12345678"
        android:labelFor="@id/colorHex"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="4"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/color_hexa_value"
        app:layout_constraintTop_toBottomOf="@id/barAlpha"
        app:layout_constraintLeft_toRightOf="@id/colorWork"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text" />

    <ImageView
        android:id="@+id/colorSample"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/color_range"
        app:layout_constraintTop_toBottomOf="@id/colorHex"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/colorSample"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/select"
        />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/colorSample"
        app:layout_constraintLeft_toRightOf="@id/cancel"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>